--- a/jekyll-site/index.html
+++ b/jekyll-site/index.html
@@ -113,9 +113,9 @@ new Countdown(opening).tick(function(days, hours, mins, secs) {
         <div class="wrap">
             <h3>Who are <b>Friends of the Bloomingdale Trail</b>?</h3>
             <p>
-                Friends of the Bloomingdale Trail is non-profit organization, formed
+                Friends of the Bloomingdale Trail is non-profit, all-volunteer organization, formed
                 in 2003, to advocate on behalf of the local community around the
-                Bloomingdale for the Trail project. FBT ... TK
+                Bloomingdale Trail project.
             </p>
             <div class="photos swipebox">
                 <a href="/img/Trailcleanup01.jpg" rel="gallery-2" class="swipebox" title="Trail cleanup event">
