--- a/jekyll-site/reframing-ruin/megan-stytz-yates/index.html
+++ b/jekyll-site/reframing-ruin/megan-stytz-yates/index.html
@@ -171,5 +171,14 @@
         <script src="/js/lib/jquery.justifiedGallery.min.js"></script>
         <script src="/js/lib/jquery.swipebox.min.js"></script>
         <script src="/js/gallery.js"></script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-63283023-1', 'auto');
+          ga('send', 'pageview');
+        </script>
     </body>
 </html>
