Update board page; add PAC letter; add vertical map test

--- a/jekyll-site/access_points/nearby.html
+++ b/jekyll-site/access_points/nearby.html
@@ -6,6 +6,10 @@ layout: default
     <div class="col-md-8 col-md-offset-2">
         <h1 class="text-center">What’s my closest access point?</h1>
 
+        <p>Put in your address, or click to use your current location if you’re out
+        and about with your mobile device, and we’ll show you which access point to The
+        Bloomingdale Trail is closest to you and a map of how to get there!</p>
+
         <form>
             <div class="form-group">
                 <label>Starting location</label>
@@ -18,10 +22,10 @@ layout: default
             <div class="form-group">
                 <label>How do you want to get there?</label>
                 <select name=mode class="form-control input-lg">
-                    <option value=DRIVING>By driving</option>
-                    <option value=WALKING>By walking</option>
                     <option value=BICYCLING>By bicycle</option>
+                    <option value=WALKING>By walking</option>
                     <option value=TRANSIT>By transit</option>
+                    <option value=DRIVING>By driving</option>
                 </select>
             </div>
             <div class="text-center">
