--- a/jekyll-site/index.html
+++ b/jekyll-site/index.html
@@ -113,9 +113,10 @@ new Countdown(opening).tick(function(days, hours, mins, secs) {
         <div class="wrap">
             <h3>Who are <b>Friends of the Bloomingdale Trail</b>?</h3>
             <p>
-                Friends of the Bloomingdale Trail is all-volunteer organization, formed
-                in 2003, to advocate on behalf of the local community around the
-                Bloomingdale Trail project.
+                Friends of the Bloomingdale Trail is all-volunteer
+                organization, formed in 2003, to advocate on behalf of the local community
+                around the Bloomingdale Trail project. <abbr title="Friends of the Bloomingdale Trail">FBT</abbr>
+                is an official Chicago Park District Advisory Council.
             </p>
             <div class="photos swipebox">
                 <a href="/img/Trailcleanup01.jpg" rel="gallery-2" class="swipebox" title="Trail cleanup event">
