Add image to access point finder

--- a/jekyll-site/access_points/nearby.html
+++ b/jekyll-site/access_points/nearby.html
@@ -3,12 +3,14 @@ layout: default
 ---
 
 <div class="row closest-access-pt">
-    <div class="col-md-8 col-md-offset-2">
-        <h1 class="text-center">What’s my closest access point?</h1>
+    <div class="col-md-6 col-md-offset-3">
+        <p class="text-center"><b>Friends of the Bloomingdale Trail</b></p>
+        <img src="/img/access_pt_header.jpg" class="img-responsive center-block">
+        <h2 class="text-center">What’s my closest access point?</h2>
 
         <p>Put in your address, or click to use your current location if you’re out
         and about with your mobile device, and we’ll show you which access point to The
-        Bloomingdale Trail is closest to you and a map of how to get there!</p>
+        Bloomingdale Trail / The 606 is closest to you and a map of how to get there!</p>
 
         <form>
             <div class="form-group">
@@ -39,6 +41,7 @@ layout: default
 <style>
 .closest-access-pt {
     padding-top: 3em;
+    margin-bottom: 3em;
 }
 .closest-access-pt .heading {
     padding: 10px;
